# potxkit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  llms.txt  pyproject.toml
.githooks/: pre-commit
.github/workflows/: lint.yml  publish.yml  tests.yml
SKILLS/brand-pptx-template/: SKILL.md
SKILLS/brand-pptx-template/references/: brand-extraction.js  pptxgenjs-starter.js
SKILLS/brand-pptx-template/scripts/: scaffold_deck.js
assets/: app_icon.pxd  logo.pxd
docs/: SDK.md  mcp.json  slide_tree.json
docs/PRD/: requirements.md
docs/use_cases/: gaps_plan.md  use_cases.md
examples/: README.md  basic_edit.py  mapping.json  new_template.py  palette.json  palette_json.py  styles.json  tree_summary.txt
mcpb/src/: server.py
scripts/: build_mcpb.py  create_default_theme.py  generate_base_template.py  install-hooks.sh
src/potxkit/: __init__.py  audit.py  auto_layout.py  cli.py  content_types.py  dump_tree.py  formatting.py  layout_ops.py  mcp_server.py  media.py  normalize.py  package.py  rels.py  resources.py  sanitize.py  slide_index.py  storage.py  template.py  theme.py  typography.py  validate.py
src/potxkit/data/: __init__.py  base.potx
tests/: conftest.py  test_audit.py  test_auto_layout.py  test_dump_tree.py  test_formatting.py  test_mcp_server.py  test_normalize.py  test_prune_layouts.py  test_reindex_layouts.py  test_sanitize.py  test_theme.py  test_typography.py
