[project]
name = "potxkit"
version = "0.1.0"
description = "POTX theme editor"
authors = [
    {name = "patrick o'leary",email = "pjaol@pjaol.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fsspec>=2024.2.0",
    "fastmcp>=2.0,<3",
]

[project.scripts]
potxkit = "potxkit.mcp_server:main"
potxkit-cli = "potxkit.cli:main"

[tool.poetry]
packages = [{include = "potxkit", from = "src"}]
include = ["src/potxkit/data/base.potx"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.25.3"
python-pptx = "^0.6.23"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
