[project]
name = "potxkit"
version = "0.1.0"
description = "POTX theme editor"
authors = [
    {name = "patrick o'leary",email = "pjaol@pjaol.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fsspec>=2024.2.0",
    "fastmcp>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/thevgergroup/potxkit"
Repository = "https://github.com/thevgergroup/potxkit"
Issues = "https://github.com/thevgergroup/potxkit/issues"
Documentation = "https://github.com/thevgergroup/potxkit/blob/main/docs/SDK.md"
PyPI = "https://pypi.org/project/potxkit/"

[project.scripts]
potxkit = "potxkit.mcp_server:main"
potxkit-cli = "potxkit.cli:main"

[tool.poetry]
packages = [{include = "potxkit", from = "src"}]
include = ["src/potxkit/data/base.potx"]

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^3.8.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.25.3"
python-pptx = "^0.6.23"
ruff = "^0.7.3"
vulture = "^2.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.vulture]
min_confidence = 80
paths = ["src/potxkit"]
exclude = ["*/data/*"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
